log
Sun Mar 20 20:45:14 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2f699a2
Sun Mar 20 20:46:33 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
ab47ffb
Sun Mar 20 20:53:07 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
71b4fd6
Sun Mar 20 20:54:44 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
33367e6
Sun Mar 20 20:57:00 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9bf53fa
Sun Mar 20 20:57:55 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
3445e58
Sun Mar 20 20:59:04 HSP 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
3bb0b28
